/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package Units;

/**
 *
 * @author matt
 */
public class Stack {
    Class<?> unit1;
    Class<?> unit2;
    
       
}
